--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 			</div>
 			<span class="fa fa-bars menu-icon"></span>
 			<div class="header-right">
+				<a href="#">Pelajaran</a>
+                <a href="#">Daftar</a>
 				<a href=# class="login">Log in</a>
 			</div>
 		</div>
