--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			<span class="fa fa-bars menu-icon"></span>
 			<div class="header-right">
 				<a href="#">Pelajaran</a>
-                <a href="#">Daftar</a>
-				<a href=# class="login">Log in</a>
+               			<a href="#">Daftar</a>
+				<a href="#" class="login">Log in</a>
 			</div>
 		</div>
 		</header>
